--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "flashtype",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://PaulAnkita.github.io/flashType",
+  "homepage": "http://PaulAnkita.github.io/flashType",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
